--- a/footer.html
+++ b/footer.html
@@ -39,10 +39,9 @@
                 </div>
                 <div id="webFooter">
                     <h3> address </h3>
-                    <p> building 101 </p>
-                    <p> central avenue </p>
-                    <p> la - 902722 </p>
-                    <p> united states </p>
+                  
+                    <p> Bellary </p>
+                    <p> Karnataka </p>
                 </div>
             </div>
             
